syntax = "proto3";

import "google/protobuf/struct.proto";
package main;

option go_package = "github.com/sebasttiano13/AnnieDad/internal/proto/anniedad";


message PostMediaRequest {
  repeated PostMediaRequestMessage data = 1;
}

message PostMediaRequestMessage {
  string filename = 1;
  string mime_type = 2;      // optional
  int64 size_bytes = 3;      // optional
  google.protobuf.Struct meta = 4; // optional
}

enum MediaStatus {
  MEDIA_OK = 0;
  MEDIA_ERROR = 1;
  MEDIA_SKIPPED = 2;
}

message PostMediaResponse {
  repeated PostMediaResponseMessage data = 1;
}

message PostMediaResponseMessage {
  string file_id = 1;
  string filename = 2;
  string upload_url = 3;
  string storage_path = 4;
  MediaStatus status = 5;
  string error_message = 6;
}

message GetMediaRequest {
  repeated GetMediaRequestMessage data = 1;
}

message GetMediaRequestMessage {
  string file_id = 1;
}

message GetMediaResponse {
  repeated GetMediaResponseMessage data = 1;
}

message GetMediaResponseMessage {
  string download_url = 1;
  string file_id = 2;
  string filename = 3;
  string mime_type = 4;
  int64 size_bytes = 5;
  string uploaded_at = 6;
  google.protobuf.Struct meta = 7;
  string error_message = 8;
}

service Media {
  rpc PostURLs(PostMediaRequest) returns (PostMediaResponse);
  rpc GetURLs(GetMediaRequest) returns (GetMediaResponse);
}